# fenecon_pv_api

./: .envrc  .gitignore  .sops.yaml  Cargo.toml  flake.nix  pv_api.service  shell-inheritance.nix  startup.nu
crates/postgres-db/: .env
crates/sqlite-db/: .env
data/: archive.db  cache.db  test_power_cache.db
secrets/: secrets.env  secrets.json
src/: calculator.rs  collector.rs  config.rs  db.rs  health.rs  main.rs  mqtt.rs  test.rs
