[package]
name = "pv_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
rumqttc = "0.24"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "sqlite",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
anyhow = "1.0"
statum = "0.1.48"
color-eyre = "0.6.5"
